Colaboratory를 통해 생성됨

--- a/1_Concepts.ipynb
+++ b/1_Concepts.ipynb
@@ -115,13 +115,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 다국어 BERT (mBERT) 가져오기\n",
-        "\n",
+        "# 다국어 BERT (mBERT) 의 Attention 점수 확인하기\n"
+      ],
+      "metadata": {
+        "id": "RtRSJp4srq6N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### 모델 허브에서 모델 다운로드하기\n",
         "* Hugging Face model hub: https://huggingface.co/bert-base-multilingual-cased"
       ],
       "metadata": {
-        "id": "RtRSJp4srq6N"
+        "id": "GZ4PWnoRuei3"
       }
     },
     {
@@ -134,7 +141,7 @@
       "metadata": {
         "id": "RLj6pMF4F-hv"
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -163,9 +170,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3W5E_AGzK2TA",
-        "outputId": "bb7f6f0d-a132-434a-bd39-2fdc4a2c9c5e"
+        "outputId": "46984839-58b4-4959-9bb0-5284312f5b63"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2NkaD2M0H00E",
-        "outputId": "b29bb17a-4298-4fe9-8c13-8280488c6bd6"
+        "outputId": "9af8c5a4-3d75-46e5-f6f0-c7942c36c487"
       },
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +296,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 7
         }
       ]
     },
@@ -305,9 +312,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_rwpGMrzHVG-",
-        "outputId": "975e7c36-de9c-4166-9d5f-d1226fdd1927"
+        "outputId": "c69ab7e2-e51c-4465-bc51-596c022045df"
       },
-      "execution_count": 18,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,14 +348,18 @@
       "metadata": {
         "id": "UPvmyL1-XOAC"
       },
-      "execution_count": 19,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "import torch\n",
-        "device = torch.device(\"cuda\")\n",
+        "\n",
+        "if torch.cuda.is_available():\n",
+        "  device = torch.device(\"cuda\")\n",
+        "else:\n",
+        "  device = torch.device(\"cpu\")\n",
         "\n",
         "# 모델과 입력 GPU 메모리에 올리기\n",
         "model = model.to(device)\n",
@@ -361,7 +372,7 @@
       "metadata": {
         "id": "W4iCFTZ-Bt1H"
       },
-      "execution_count": 20,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -389,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dvehsz0gXkD5",
-        "outputId": "0e8492ae-fa52-4c15-d91c-0f23c394f2ae"
+        "outputId": "eeb49916-ec58-4a39-d5c9-dc2e6b5ec77a"
       },
-      "execution_count": 21,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 11
         }
       ]
     },
@@ -435,7 +446,7 @@
       "metadata": {
         "id": "N6Hrtxlxawy7"
       },
-      "execution_count": 22,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -462,17 +473,17 @@
           "height": 1000
         },
         "id": "3-wHxrEqbfni",
-        "outputId": "4f8f7de5-687d-4620-96a8-d69389781862"
+        "outputId": "19af4d4b-bfdd-4572-ec31-dbb0fcf09e82"
       },
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-22-73cbe3eccf61>:15: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-12-73cbe3eccf61>:15: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax.set_xticklabels([''] + tokens, fontdict=fontdict, rotation=90)\n",
-            "<ipython-input-22-73cbe3eccf61>:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-12-73cbe3eccf61>:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax.set_yticklabels([''] + tokens, fontdict=fontdict)\n"
           ]
         },
@@ -487,6 +498,72 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 거대 언어모델 Facebook/Incoder 사용해서 코드 자동완성 해보기"
+      ],
+      "metadata": {
+        "id": "a8rUOPfGur6O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 모델 허브에서 모델과 토크나이저 가져오기"
+      ],
+      "metadata": {
+        "id": "Xd-kNejRvNWS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import AutoModelForCausalLM\n",
+        "\n",
+        "model = AutoModelForCausalLM.from_pretrained(\"facebook/incoder-1B\")\n",
+        "model = model.to(device)\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"facebook/incoder-1B\")\n",
+        "\n",
+        "example_text = \"\"\"\n",
+        "def hello(name):\n",
+        "  print(f\"\"\".strip()\n",
+        "tokenized_inputs = tokenizer(example_text, return_tensors=\"pt\")"
+      ],
+      "metadata": {
+        "id": "Fw_aVzAWu5T0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 자동완성 `model.generate` 기능 호출\n",
+        "* `num_beams`: beam search 크기\n",
+        "* `repetition_penalty`: 언어모델이 뒤에 오는 토큰을 반복적으로 생성하는 경향이 있습니다. 이를 보정해주는 값입니다."
+      ],
+      "metadata": {
+        "id": "AK_o9jCnvRIf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "example_text = \"\"\"\n",
+        "def hello(name):\n",
+        "  print(f\"\"\".strip()\n",
+        "tokenized_inputs = tokenizer(example_text, return_tensors=\"pt\")\n",
+        "input_ids = tokenized_inputs.input_ids.to(model.device)\n",
+        "generated_ids = model.generate(input_ids, max_length=128, repetition_penalty=0.5, num_beams=5)\n",
+        "print(tokenizer.decode(generated_ids[0], skip_special_tokens=True))"
+      ],
+      "metadata": {
+        "id": "B-quLC-ZvnIN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
