Colaboratory를 통해 생성됨

--- a/1_Concepts.ipynb
+++ b/1_Concepts.ipynb
@@ -170,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3W5E_AGzK2TA",
-        "outputId": "46984839-58b4-4959-9bb0-5284312f5b63"
+        "outputId": "038f5fee-557a-4ccc-8c77-b0e7845ebbb3"
       },
       "execution_count": 6,
       "outputs": [
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2NkaD2M0H00E",
-        "outputId": "9af8c5a4-3d75-46e5-f6f0-c7942c36c487"
+        "outputId": "a4a859e4-e832-4f50-a5a7-108fbfcee9f9"
       },
       "execution_count": 7,
       "outputs": [
@@ -312,7 +312,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_rwpGMrzHVG-",
-        "outputId": "c69ab7e2-e51c-4465-bc51-596c022045df"
+        "outputId": "30957ded-be89-4d25-f126-251a3db8f3aa"
       },
       "execution_count": 8,
       "outputs": [
@@ -380,7 +380,7 @@
       "source": [
         "### mBERT 모델의 Attention 점수 확인해보기\n",
         "\n",
-        "* 각 층별 Attention shape: batch_size, num_heads, sequence_length, sequence_length\n",
+        "* 각 층별 Attention 행렬 크기: `batch_size * num_heads  * sequence_length * sequence_length`\n",
         "([참고](https://huggingface.co/docs/transformers/main_classes/output#transformers.modeling_outputs.BaseModelOutput.attentions))\n",
         "* multi-head attention: attention 연산을 병렬화하는 기법\n",
         "* Transformers 의 `ModelOutput` 출력에 달린 `attentions` 는 이미 multi-head attention 에 대한 softmax, weighted average 연산을 마친 값"
@@ -400,7 +400,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dvehsz0gXkD5",
-        "outputId": "eeb49916-ec58-4a39-d5c9-dc2e6b5ec77a"
+        "outputId": "7b87abb0-5ba5-4866-a776-2af9de4cd3fa"
       },
       "execution_count": 11,
       "outputs": [
@@ -473,7 +473,7 @@
           "height": 1000
         },
         "id": "3-wHxrEqbfni",
-        "outputId": "19af4d4b-bfdd-4572-ec31-dbb0fcf09e82"
+        "outputId": "1f3ace1b-cf97-483e-92f5-37be268dd4d7"
       },
       "execution_count": 13,
       "outputs": [
@@ -511,7 +511,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 모델 허브에서 모델과 토크나이저 가져오기"
+        "### 모델 허브에서 모델과 토크나이저 가져오기\n",
+        "* HuggingFace model hub 에서 오픈 소스 모델 검색해서 가져오기: https://huggingface.co/models\n",
+        "\n",
+        "주의할 점\n",
+        "* 로컬 서버에서 사용할 경우 모델 크기가 서버의 GPU 에 맞을지 확인하세요\n",
+        "  * 파라미터 개수 * 4byte * 1.2(실행 비용) < 서버 GPU 메모리 크기\n",
+        "* 믿을 수 있는 모델인지 확인하세요. `pytorch_model.bin` 은 파이썬 pickle 형식이라 함부로 로드하면 위험할 수 있습니다."
       ],
       "metadata": {
         "id": "Xd-kNejRvNWS"
@@ -560,10 +566,44 @@
         "print(tokenizer.decode(generated_ids[0], skip_special_tokens=True))"
       ],
       "metadata": {
-        "id": "B-quLC-ZvnIN"
+        "id": "B-quLC-ZvnIN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d13f2a13-8798-4f66-ac8f-a43ae0ca22e1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "def hello(name):\n",
+            "  print(f'''Hello {name}!''')\n",
+            "hello('World')\n",
+            "</cell>\n",
+            "<cell>\n",
+            "def hello(name):\n",
+            "  print(f'''Hello {name}!''')\n",
+            "hello('World')\n",
+            "</cell>\n",
+            "<cell>\n",
+            "def hello(name):\n",
+            "  print(f'''Hello {name}!''')\n",
+            "hello('World')\n",
+            "</cell>\n",
+            "<cell>\n",
+            "def hello(name):\n",
+            "  print(f'''Hello {name}!''')\n",
+            "hello('World')\n",
+            "</cell>\n",
+            "<cell>\n",
+            "def hello(name):\n",
+            "  print(f'''Hello {name}!''')\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
