Colaboratory를 통해 생성됨

--- a/1_Concepts.ipynb
+++ b/1_Concepts.ipynb
@@ -42,45 +42,19 @@
         "### 1. GPU 사용 설정\n",
         "메뉴 바에서 [런타임] -> [런타임 유형 변경] -> [하드웨어 가속기] 항목에서 GPU 선택\n",
         "\n",
-        "※ Colab GPU 하루 최대 12시간까지 사용 가능\n",
-        "\n",
-        "### 2. 라이브러리 설치하기\n",
-        "1. 현재 환경에 설치된 라이브러리 목록을 확인한다\n",
-        "2. 없는건 설치\n",
-        "  * torch\n",
-        "  * transformers\n",
-        "  * datasets"
+        "※ Colab GPU 하루 최대 12시간까지 사용 가능\n"
       ],
       "metadata": {
         "id": "uZzOtYQiDPNU"
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "rUXqscKGmUgR"
-      },
-      "outputs": [],
-      "source": [
-        "! pip freeze"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! pip install transformers datasets"
-      ],
-      "metadata": {
-        "id": "krbSJqrrnEav"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "### 3. 한글 설정"
+        "### 2. 한글 설정\n",
+        "\n",
+        "주의: 아래 apt-get 설치 코드가 현재 런타임에는 바로 반영되지 않을 수 있습니다.\n",
+        "아래 코드 셀을 실행한 뒤 [런타임] -> [런타임 다시 시작] 을 통해 설치된 패키지가 현재 실행 환경에 반영되도록 해주세요."
       ],
       "metadata": {
         "id": "_Mr8NUV0-cti"
@@ -115,6 +89,42 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### 3. 라이브러리 설치하기\n",
+        "1. 현재 환경에 설치된 라이브러리 목록을 확인\n",
+        "2. 없는건 설치\n",
+        "  * torch\n",
+        "  * transformers\n",
+        "  * datasets"
+      ],
+      "metadata": {
+        "id": "mN7IlHVCff2Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rUXqscKGmUgR"
+      },
+      "outputs": [],
+      "source": [
+        "! pip freeze"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! pip install transformers datasets"
+      ],
+      "metadata": {
+        "id": "krbSJqrrnEav"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# 다국어 BERT (mBERT) 의 Attention 점수 확인하기\n"
       ],
       "metadata": {
@@ -141,8 +151,71 @@
       "metadata": {
         "id": "RLj6pMF4F-hv"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import AutoTokenizer\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-multilingual-cased\")"
+      ],
+      "metadata": {
+        "id": "UPvmyL1-XOAC"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 문장 토크나이즈 해보기"
+      ],
+      "metadata": {
+        "id": "3vHUkt34nifP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "example_text = \"가는 말이 고와야 오는 말도 곱다\"\n",
+        "tokens = tokenizer.tokenize(example_text, add_special_tokens=True)\n",
+        "token_ids = tokenizer.convert_tokens_to_ids(tokens)\n",
+        "for token, token_id in zip(tokens, token_ids):\n",
+        "  print(f\"{token:>3} :: {token_id}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "07gyXSamnhz5",
+        "outputId": "3c760ff9-eec2-4928-d1a4-1c95566c1b2f"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[CLS] :: 101\n",
+            "  가 :: 8843\n",
+            "##는 :: 11018\n",
+            "  말 :: 9251\n",
+            "##이 :: 10739\n",
+            "  고 :: 8888\n",
+            "##와 :: 12638\n",
+            "##야 :: 21711\n",
+            "  오 :: 9580\n",
+            "##는 :: 11018\n",
+            "  말 :: 9251\n",
+            "##도 :: 12092\n",
+            "  곱 :: 8894\n",
+            "##다 :: 11903\n",
+            "[SEP] :: 102\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -170,9 +243,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3W5E_AGzK2TA",
-        "outputId": "038f5fee-557a-4ccc-8c77-b0e7845ebbb3"
+        "outputId": "ef9c98f5-2a94-492d-e2ae-01f7002774ad"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,9 +357,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2NkaD2M0H00E",
-        "outputId": "a4a859e4-e832-4f50-a5a7-108fbfcee9f9"
+        "outputId": "c93a29d1-2d57-4348-c56e-48a94648d2df"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +369,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     },
@@ -312,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_rwpGMrzHVG-",
-        "outputId": "30957ded-be89-4d25-f126-251a3db8f3aa"
+        "outputId": "0adf3e56-235d-4985-e835-aa98bf3f1f15"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,22 +411,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from transformers import AutoTokenizer\n",
-        "\n",
-        "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-multilingual-cased\")\n",
-        "\n",
-        "example_text = \"가는 말이 고와야 오는 말도 곱다\"\n",
-        "tokenized_inputs = tokenizer(example_text, return_tensors='pt')"
-      ],
-      "metadata": {
-        "id": "UPvmyL1-XOAC"
-      },
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import torch\n",
         "\n",
         "if torch.cuda.is_available():\n",
@@ -363,6 +420,10 @@
         "\n",
         "# 모델과 입력 GPU 메모리에 올리기\n",
         "model = model.to(device)\n",
+        "\n",
+        "example_text = \"가는 말이 고와야 오는 말도 곱다\"\n",
+        "tokenized_inputs = tokenizer(example_text, return_tensors='pt')\n",
+        "\n",
         "input_ids = tokenized_inputs.input_ids.to(device)\n",
         "attention_mask = tokenized_inputs.attention_mask.to(device)\n",
         "\n",
@@ -372,7 +433,7 @@
       "metadata": {
         "id": "W4iCFTZ-Bt1H"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -400,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dvehsz0gXkD5",
-        "outputId": "7b87abb0-5ba5-4866-a776-2af9de4cd3fa"
+        "outputId": "1c7b94b1-fae4-46ed-efd9-f71b1c72a15e"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +473,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 13
         }
       ]
     },
@@ -446,7 +507,7 @@
       "metadata": {
         "id": "N6Hrtxlxawy7"
       },
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -473,17 +534,17 @@
           "height": 1000
         },
         "id": "3-wHxrEqbfni",
-        "outputId": "1f3ace1b-cf97-483e-92f5-37be268dd4d7"
+        "outputId": "fb5ff08f-2234-4ee0-bed1-df35617c1e87"
       },
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-12-73cbe3eccf61>:15: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-14-73cbe3eccf61>:15: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax.set_xticklabels([''] + tokens, fontdict=fontdict, rotation=90)\n",
-            "<ipython-input-12-73cbe3eccf61>:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+            "<ipython-input-14-73cbe3eccf61>:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
             "  ax.set_yticklabels([''] + tokens, fontdict=fontdict)\n"
           ]
         },
@@ -546,9 +607,42 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### 모델 구조 확인하기"
+      ],
+      "metadata": {
+        "id": "Q_vPbECJcp6y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 모델 구조를 출력해서 mBERT 와 차이점을 확인해보세요"
+      ],
+      "metadata": {
+        "id": "FhmnuL0tc0O8"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 모델 파라미터 개수를 구해서 로컬에서 실행하려면 메모리 소비량이 얼마나 될지 추산해보세요"
+      ],
+      "metadata": {
+        "id": "RnLZS6xac5rc"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### 자동완성 `model.generate` 기능 호출\n",
         "* `num_beams`: beam search 크기\n",
-        "* `repetition_penalty`: 언어모델이 뒤에 오는 토큰을 반복적으로 생성하는 경향이 있습니다. 이를 보정해주는 값입니다."
+        "* `repetition_penalty`: 언어모델이 뒤에 오는 토큰을 반복적으로 생성하는 경향이 있습니다. 이를 보정해주는 값입니다.\n",
+        "\n",
+        "* 코드를 실행한 뒤 실제로 사용한 리소스를 확인해서 앞에서 추산한 값과 비슷한지 확인해봅니다."
       ],
       "metadata": {
         "id": "AK_o9jCnvRIf"
@@ -570,9 +664,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d13f2a13-8798-4f66-ac8f-a43ae0ca22e1"
+        "outputId": "6a7efb48-50b9-4080-a606-49bac766af02"
       },
-      "execution_count": 15,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
