Colaboratory를 통해 생성됨

--- a/2_Fine_tuning.ipynb
+++ b/2_Fine_tuning.ipynb
@@ -754,7 +754,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f1febd50-5e3b-4304-ceb4-6a7f6a08a5de"
+        "outputId": "973cab5a-7bcb-4719-c651-33dc0241da7f"
       },
       "execution_count": null,
       "outputs": [
@@ -794,7 +794,7 @@
       "source": [
         "import torch\n",
         "\n",
-        "assert torch.cuda.is_available():\n",
+        "assert torch.cuda.is_available()\n",
         "device = torch.device(\"cuda\")"
       ],
       "metadata": {
@@ -1210,7 +1210,7 @@
         "size = round(tokenized_datasets[\"train\"].num_rows * sample_ratio)\n",
         "sample[\"train\"] = tokenized_datasets[\"train\"].shuffle(seed=1234).select(range(size))\n",
         "\n",
-        "\"\"\"validation, test 에대해서도 동일한 방법으로 데이터를 샘플링할 수 있습니다\"\"\"\n",
+        "# validation, test 에대해서도 동일한 방법으로 데이터를 샘플링해 보세요\n",
         "\n",
         "sample_datasets = DatasetDict(sample)\n",
         "sample_datasets.num_rows"
@@ -1315,6 +1315,8 @@
       "cell_type": "code",
       "source": [
         "from transformers import Trainer\n",
+        "\n",
+        "# 아래 코드를 실행할 때 오류가 생긴다면 데이터 전처리 부분을 다시 확인해보세요\n",
         "\n",
         "trainer = Trainer(\n",
         "  model=model,\n",
