Colaboratory를 통해 생성됨

--- a/1_Concepts.ipynb
+++ b/1_Concepts.ipynb
@@ -89,13 +89,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 3. 라이브러리 설치하기\n",
-        "1. 현재 환경에 설치된 라이브러리 목록을 확인\n",
-        "  * colab 에서 어떤 VM 을 제공하는지 몰라서 확인해봐야합니다\n",
-        "2. 없는건 설치\n",
-        "  * torch: 보통 설치가 되어있습니다. 없는 경우 아래 `pip install` 커맨드 뒤에 `torch` 를 추가해주세요\n",
-        "  * transformers\n",
-        "  * datasets"
+        "### 3. 라이브러리 설치하기"
       ],
       "metadata": {
         "id": "mN7IlHVCff2Q"
@@ -103,33 +97,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "rUXqscKGmUgR"
-      },
-      "outputs": [],
       "source": [
-        "! pip freeze"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! pip install transformers datasets"
+        "! pip install torch transformers datasets"
       ],
       "metadata": {
         "id": "krbSJqrrnEav"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! pip install torch"
-      ],
-      "metadata": {
-        "id": "3BMngdAaANWy"
       },
       "execution_count": null,
       "outputs": []
