Colaboratory를 통해 생성됨

--- a/2_Fine_tuning.ipynb
+++ b/2_Fine_tuning.ipynb
@@ -722,6 +722,7 @@
         "\n",
         "* 라이브러리 설치\n",
         "* 구글 드라이브 마운트\n",
+        "  * 학습 중 약 3GB 데이터가 드라이브에 저장됩니다 여유공간을 확인해주세요\n",
         "* 텐서보드 연결\n",
         "* GPU 연결 확인"
       ],
@@ -732,7 +733,7 @@
     {
       "cell_type": "code",
       "source": [
-        "! pip install transformers datasets evaluate accelerate"
+        "! pip install torch transformers datasets evaluate accelerate"
       ],
       "metadata": {
         "id": "6GXN_t-vuws5"
@@ -1316,7 +1317,7 @@
       "source": [
         "from transformers import Trainer\n",
         "\n",
-        "# 아래 코드를 실행할 때 오류가 생긴다면 데이터 전처리 부분을 다시 확인해보세요\n",
+        "# 아래 코드를 실행할 때 오류가 생긴다면 데이터 전처리부터 코드를 다시 확인해보세요\n",
         "\n",
         "trainer = Trainer(\n",
         "  model=model,\n",
